Fix signup and submit buttons. Add some spacing for footer

--- a/src/components/CalendarEvent/CalendarEvent.css
+++ b/src/components/CalendarEvent/CalendarEvent.css
@@ -1,8 +1,3 @@
 #cf {
     width: 500px;
 }
-#bc {
-    background-color: rgb(45, 95, 37) !important;
-    border-color: white !important;
-    color: white !important;
-}
